Fixes for URLQueue unit test failures introduced during URL to URI refactoring